--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           srcset=""
         />
       </div>
-      <h1>Flag App</h1>
+      <h1 class="text-danger">Flag App</h1>
     </header>
     <main class="container">
       <div class="input-group mb-3 d-flex justify-content-center mt-3">
