--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         </div>
       </div>
       <div
-        class="countries mt-4 d-flex flex-column align-items-center gap-4"
+        class="countries mt-4 d-flex flex-row  justify-content-center align-items-center gap-4"
       ></div>
     </main>
-  </body>
+<script src="./app.js"></script>
+</body>
 </html>
