--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     referrerpolicy="no-referrer"
   />
     <title>Flag APP</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body class="bg-light">
     <header class="d-flex flex-column align-items-center">
