--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div
         class="countries mt-4 d-flex flex-row  justify-content-center align-items-center gap-4"
-      ></div>
+      id="flags"></div>
     </main>
 <script src="./app.js"></script>
 </body>
